@@ -2,6 +2,12 @@ Changelog
 =========
 
 
+2014-06-19a : v0.7.2 'Remember me'
+----------------------------------
+
+* keep memory of last directory used
+
+
 2014-06-17a : v0.7.1
 --------------------
 
